# chabad-library-books

./: .gitignore  LICENSE  README.md  SETUP_GITHUB.md  extract-pdf.js
.github/workflows/: ci.yml  deploy.yml
docs/: index.html
docs/assets/: index.D-AUvbjw.js
docs/corpus/: chapter_0.txt  chapter_1.txt  chapter_10.txt  chapter_11.txt  chapter_2.txt  chapter_3.txt  chapter_4.txt  chapter_5.txt  chapter_6.txt  chapter_7.txt  chapter_8.txt  chapter_9.txt  entities_extracted.json  undaunted_text.txt
docs/data/: entities.json  manifest.json
docs/data/pages/: 100.json  101.json  102.json  103.json  104.json  105.json  106.json  107.json  108.json  109.json  110.json  111.json  112.json  113.json  114.json  115.json  116.json  117.json  118.json  119.json  120.json  121.json  122.json  123.json  124.json  125.json  126.json  127.json  128.json  129.json  130.json  131.json  132.json  133.json  134.json  135.json  136.json  137.json  138.json  139.json  (+355 more)
pipeline/: pyproject.toml
pipeline/undaunted/: __init__.py  build.py  cli.py  load.py  schema.py  validate.py
registry/: chapters.yaml  concepts.yaml  events.yaml  people.yaml  places.yaml  quotes.yaml  relationships.yaml  times.yaml
registry/wiki/: person.yosef_yitzchak.md
site/: index.html  package-lock.json  package.json  vite.config.ts
site/src/: main.ts
